--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -1,4 +1,4 @@
-on:
+'on:
   push:
     branches: [main]
   pull_request:
@@ -36,25 +36,25 @@ jobs:
         id: cache-pipenv
         uses: actions/cache@v4
         with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+          path: ~/.local/share/virtualenvs'
+          # key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
-      - name: 🛠 Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: |
-          touch Pipfile
-          pipenv install --deploy --dev
+      #- name: 🛠 Install dependencies
+        #if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        #run: |
+          #touch Pipfile
+          #pipenv install --deploy --dev
 
-      - name: 🕵️‍♂️ Scrape content and output
-        run: |
-          pipenv run python ./script.py
+      #- name: 🕵️‍♂️ Scrape content and output
+        #run: |
+          #pipenv run python ./script.py
 
-      - name: 🚀 Commit generated logs
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: "Commit updated data 📈"
-          add: "./data/*.json"
-          cwd: "."
-          default_author: github_actions
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #- name: 🚀 Commit generated logs
+        #uses: EndBug/add-and-commit@v9
+        #with:
+          #message: "Commit updated data 📈"
+          #add: "./data/*.json"
+          #cwd: "."
+          #default_author: github_actions
+        #env:
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
